[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
structopt = { version = "0.3.26", default-features = false }
thiserror = "^1.0.49"
