[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitvec = "1.0.1"
derive_more = { version = "1.0.0-beta.6", features = ["deref", "deref_mut", "from"] }
indicatif = "0.17.7"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
rayon = "1.8.0"
sorted-vec = "0.8.3"
structopt = { version = "0.3.26", default-features = false }
thiserror = "^1.0.49"
